add 2 tables to add stores and brands and fix typo on the app

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Shoe store</title>
+    <title>Shoe and brands!</title>
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css'>
     <link href="<%= url('/../css/styles.css') %>" rel="stylesheet" type="text/css"/>
   </head>
