--- a/views/index.erb
+++ b/views/index.erb
@@ -4,6 +4,32 @@
 
 
 <div class="row">
+  <div class="col-sm-6">
+
+    <!-- Add New store -->
+    <div class="row">
+      <div class="col">
+        <div class="card bg-light">
+          <div class="card-body">
+            <h1>New Store</h1>
+            <form action="/create_store" method="post">
+              <div class="row">
+                <div class="col-sm-7">
+                  <div class="form-group">
+                    <label for="name">Store Name: </label>
+                    <input id="name" name="name" class="form-control" type="text" required>
+                  </div>
+                </div>
+              </div>
+              <button type="submit" class="btn btn-success">Create Store</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End store -->
+  </div>
+
   <!-- Add New brand -->
   <div class="col-sm-6">
     <div class="row">
@@ -34,29 +60,66 @@
     </div>
   </div>
     <!-- End brand -->
+</div><br><br>
 
+<div class="row">
+  <!-- store Table -->
   <div class="col-sm-6">
-
-    <!-- Add New store -->
-    <div class="row">
-      <div class="col">
-        <div class="card bg-light">
-          <div class="card-body">
-            <h1>New Store</h1>
-            <form action="/create_store" method="post">
-              <div class="row">
-                <div class="col-sm-7">
-                  <div class="form-group">
-                    <label for="name">Store Name: </label>
-                    <input id="name" name="name" class="form-control" type="text" required>
-                  </div>
-                </div>
-              </div>
-              <button type="submit" class="btn btn-success">Create Store</button>
-            </form>
-          </div>
+    <% if @stores.any? %>
+      <div class="card bg-light">
+        <div class="card-body">
+          <table class="table table-hover table-bordered">
+            <thead class="thead text-white bg-dark">
+              <tr>
+                <th>store</th>
+                <th>View</th>
+              </tr>
+            </thead>
+            <tbody>
+              <% @stores.each do |store| %>
+                <tr class="table-light">
+                  <td class="align-middle"><%= store.name %></td>
+                  <td style="text-align: center;">
+                    <a href="/store/<%= store.id %>">
+                      <button class="btn btn-success btn-block" type="button">View Recipes in this Tag</button>
+                    </a>
+                  </td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
         </div>
       </div>
-    </div>
-    <!-- End store -->
+    <% end %>
   </div>
+  <div class="col-sm-6">
+      <!-- Hover Effect Table -->
+    <% if @brands.any? %>
+      <div class="card bg-light">
+        <div class="card-body">
+          <table class="table table-hover table-bordered">
+            <thead class="thead text-white bg-dark">
+              <tr>
+                <th>brand</th>
+                <th>brand price</th>
+                <th>Edit</th>
+              </tr>
+            </thead>
+            <tbody>
+              <% @brands.each do |brand| %>
+                <tr class="table-light">
+                  <td class="align-middle"><%= brand.brand %></td>
+                  <td class="align-middle"><%= brand.price %></td>
+                  <td style="text-align: center;">
+                    <a href="/brand/<%= brand.id %>">
+                      <button class="btn btn-info btn-block" type="button">Edit brand</button>
+                    </a>
+                  </td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
+      </div>
+    <% end %>
+</div>
