fix a typo on the index page

--- a/views/index.erb
+++ b/views/index.erb
@@ -81,7 +81,7 @@
                   <td class="align-middle"><%= store.name %></td>
                   <td style="text-align: center;">
                     <a href="/store/<%= store.id %>">
-                      <button class="btn btn-success btn-block" type="button">View Recipes in this Tag</button>
+                      <button class="btn btn-success btn-block" type="button">View the store</button>
                     </a>
                   </td>
                 </tr>
