added a get post patch and delete methods in the app for the store info page also html to make the buttons and check boxes

--- a/views/index.erb
+++ b/views/index.erb
@@ -81,7 +81,7 @@
                   <td class="align-middle"><%= store.name %></td>
                   <td style="text-align: center;">
                     <a href="/store/<%= store.id %>">
-                      <button class="btn btn-success btn-block" type="button">View the store</button>
+                      <button class="btn btn-success btn-block" type="button">Edit store</button>
                     </a>
                   </td>
                 </tr>
@@ -112,7 +112,7 @@
                   <td class="align-middle"><%= brand.price %></td>
                   <td style="text-align: center;">
                     <a href="/brand/<%= brand.id %>">
-                      <button class="btn btn-info btn-block" type="button">Edit brand</button>
+                      <button class="btn btn-info btn-block" type="button">View brand</button>
                     </a>
                   </td>
                 </tr>
