--- a/views/store_info.erb
+++ b/views/store_info.erb
@@ -1,5 +1,5 @@
 <div class="jumbotron">
-  <h1> <%= @store.name() %> </h1>
+  <h1> Store: <%= @store.name() %> </h1>
 </div>
 
 
@@ -20,7 +20,7 @@
     <div class="form-group row">
         <button type="submit" class='btn btn-info'>Rename</button>
       <div class="col-sm-8">
-        <input class="form-control form-control-md" name="rename" id="lgFormGroupInput" placeholder="Update Name">
+        <input class="form-control form-control-md" name="rename" id="lgFormGroupInput" placeholder="Update Name" required>
       </div>
     </div>
   </form>
@@ -31,7 +31,7 @@
 <div class="row">
   <!-- Joining brands and store -->
   <div class="col-sm-12">
-      <h1>Available Brands:</h1>
+      <h1>Available Shoe Brands:</h1>
 
       <% if @brands.any?() %>
         <form action="/add_sot/<%= @store.id %>" method="post">
@@ -44,11 +44,11 @@
           <% end %>
           <button type="submit">Add Brand</button>
         </form>
-      <% end %><br><br>
+      <% end %><br>
 
       <% if @store.brands().any?() %>
 
-        <h3>Here are all the brands for this store:</h3>
+        <h3>Here are the brands you got for this store:</h3>
 
         <ul>
           <% @store.brands().each() do |add| %>
