add a one call back method to upppercase

--- a/views/index.erb
+++ b/views/index.erb
@@ -42,7 +42,7 @@
                 <div class="col-sm-7">
                   <div class="form-group">
                     <label for="brand">Brand Name: </label>
-                    <input id="brand" name="brand" class="form-control" type="text" required>
+                    <input id="brand" name="brand" class="form-control" type="text">
                   </div>
                 </div>
                 <div class="col-sm-5">
