--- a/views/index.erb
+++ b/views/index.erb
@@ -17,7 +17,7 @@
                 <div class="col-sm-7">
                   <div class="form-group">
                     <label for="name">Store Name: </label>
-                    <input id="name" name="name" class="form-control" type="text" required>
+                    <input id="name" name="name" class="form-control" type="text">
                   </div>
                 </div>
               </div>
@@ -48,7 +48,7 @@
                 <div class="col-sm-5">
                   <div class="form-group">
                     <label for="price">Price ($moneys): </label>
-                    <input id="price" name="price" class="form-control" type="number" required>
+                    <input id="price" name="price" class="form-control" type="number">
                   </div>
                 </div>
               </div>
@@ -109,7 +109,7 @@
               <% @brands.each do |brand| %>
                 <tr class="table-light">
                   <td class="align-middle"><%= brand.brand %></td>
-                  <td class="align-middle"><%= brand.price %></td>
+                  <td class="align-middle">$<%='%.02f' % brand.price %></td>
                   <td style="text-align: center;">
                     <a href="/brand/<%= brand.id %>">
                       <button class="btn btn-info btn-block" type="button">View brand</button>
