add 2 images to the readme added the errors page as well

--- a/views/brand_info.erb
+++ b/views/brand_info.erb
@@ -3,4 +3,4 @@
 </div>
 
 
-<h3>you are currently on this brand:<h6> <%= @brands.brand() %> </h6></h3>
+<h3>you are currently on this brand:<h5><strong><%= @brands.brand() %> </strong></h5></h3>
